코드리뷰반영(C-BE)

--- a/reservation/src/main/resources/application.properties
+++ b/reservation/src/main/resources/application.properties
@@ -1,4 +1,16 @@
-spring.datasource.driverClassName=com.mysql.jdbc.Driver 
-spring.datasource.url=jdbc:mysql://localhost:3306/connectdb?useUnicode=true&characterEncoding=utf8 
-spring.datasource.user=connectuser
-spring.datasource.password=connect123!@#
+server.port=9000
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=none
+
+# datasources
+
+# DEV
+datasource.mysql.url.dev=jdbc:mysql://localhost:3306/connectdb?useUnicode=true&characterEncoding=utf8
+datasource.mysql.driver.dev=com.mysql.jdbc.Driver
+datasource.mysql.user.dev=connectuser
+datasource.mysql.password.dev=connect123!@#
+
+# dev / test / preprod, change for different environment database
+environment=dev
