API작업(리뷰,상품정보)

--- a/reservation/src/main/resources/application.properties
+++ b/reservation/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=none
 # datasources
 
 # DEV
-datasource.mysql.url.dev=jdbc:mysql://localhost:3306/connectdb?useUnicode=true&characterEncoding=utf8
+datasource.mysql.url.dev=jdbc:mysql://localhost:3306/connectdb?useSSL=false&useUnicode=true&characterEncoding=utf8
 datasource.mysql.driver.dev=com.mysql.jdbc.Driver
 datasource.mysql.user.dev=connectuser
 datasource.mysql.password.dev=connect123!@#
