E작업진행(예약취소, 최종점검)

--- a/reservation/src/main/webapp/WEB-INF/web.xml
+++ b/reservation/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,10 @@
 
  	<display-name>Spring JavaConfig Sample</display-name>
 	
+	<session-config>
+	<session-timeout>15</session-timeout>
+	</session-config>
+	
 	<context-param>
 		<param-name>contextClass</param-name>
 		<param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext
