--- a/mvcexam/pom.xml
+++ b/mvcexam/pom.xml
@@ -34,7 +34,7 @@
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.2.1</version>
+			<version>[1.3.3,)</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -116,11 +116,10 @@
 		</dependency>
 
 
-		<!-- Jackson Module -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>${jackson2.version}</version>
+			<version>[2.9.10.4,)</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
