--- a/reservation/src/main/resources/application.properties
+++ b/reservation/src/main/resources/application.properties
@@ -6,11 +6,15 @@ spring.jpa.hibernate.ddl-auto=none
 
 # datasources
 
-# DEV
+# database address info
 datasource.mysql.url.dev=jdbc:mysql://localhost:3306/connectdb?useSSL=false&useUnicode=true&characterEncoding=utf8
 datasource.mysql.driver.dev=com.mysql.jdbc.Driver
 datasource.mysql.user.dev=connectuser
 datasource.mysql.password.dev=connect123!@#
+
+# image file path
+imagefile.path.dev = c:/tmp/img/
+imageload.path.dev = C:\\tmp\\
 
 # dev / test / preprod, change for different environment database
 environment=dev
