--- a/mavenweb/pom.xml
+++ b/mavenweb/pom.xml
@@ -145,6 +145,12 @@
 			<version>2.6.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.0.15.Final</version>
+		</dependency>
 	</dependencies>
 
 
